                   and alerting me to it.
                 - Added Kevin Carnes and Dirk Weisshaar to the acknowledgements.
June 5, 2008     - Fix typeo in BufferAnalysis.h

July 11, 2008    - Gui/slice.tcl - re-init the browser on accepting a gate (reinit member)
                   that restores the parameters used to the list.
                 - Expose the treeview interface to clients of 
                   Gui/browser.tcl
August 18, 2008  - Update to tkcon V2.4
September 17, 2008 
                 - Fixed error in RunState handling.. Set it to
                   "Inactive" on event source EOF.  This is needed to
 		   support batchmode processing of e.g. filter files.

Start on 3.3
September 17, 2008 
		- Added extensible factory template class directory
                  factories.  This can be used both by new factories
                  and to refactor the code provided by existing factories.
                - Use extensible factory to generate the buffer decoder
                  selected by the attach -format switch so that buffer decoders
                  are extensible.
September 18, 2008
                - Registered default decoders with DataSourcePackage
September 22, 2008 
                - Added CRingBufferDecoder support so that ring buffer
                  data can be decoded.
September 26, 2008
                - Provided mechanisms for buffer decoders to specify they
                  operate either on fixed sized blocks of data or on streams.
                  This is needed to ensure SpecTcl's input stage does not
                  get permanently blocked when data taking pauses or 
                  a run ends on a stream oriented pipe data source.
                - Indicated that the CRingBufferDecoder is a stream decoder.
                - Documented SpecTcl::addBufferDecoder.
                - Documented new behavior of the -format switch on the
                  attach command.
